{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 703,
  "lineage": "05ae6d4f-a7df-0da7-1a03-8293a8b9547f",
  "resources": [
    {
      "module": "module.aws_resources",
      "mode": "managed",
      "type": "aws_instance",
      "name": "tomcat",
      "provider": "module.aws_resources.provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws_resources",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "petclinic-gw",
      "provider": "module.aws_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761677272:internet-gateway/igw-0b4f8a812785f5663",
            "id": "igw-0b4f8a812785f5663",
            "owner_id": "148761677272",
            "tags": {
              "Name": "petclinic-igw"
            },
            "tags_all": {
              "Name": "petclinic-igw"
            },
            "vpc_id": "vpc-0a0e7ce0c150d977c"
          },
          "dependencies": [
            "module.aws_resources.aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "module": "module.aws_resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "petclinic-pub-rt",
      "provider": "module.aws_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761677272:route-table/rtb-0be88d5b9d566ad3e",
            "id": "rtb-0be88d5b9d566ad3e",
            "owner_id": "148761677272",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b4f8a812785f5663",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "petclinic-rt"
            },
            "tags_all": {
              "Name": "petclinic-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0e7ce0c150d977c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_resources.aws_internet_gateway.petclinic-gw",
            "module.aws_resources.aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "module": "module.aws_resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app1-a",
      "provider": "module.aws_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcea4f7f4f67ce48",
            "route_table_id": "rtb-0be88d5b9d566ad3e",
            "subnet_id": "subnet-0d261095abe5bf16d"
          },
          "dependencies": [
            "module.aws_resources.aws_internet_gateway.petclinic-gw",
            "module.aws_resources.aws_route_table.petclinic-pub-rt",
            "module.aws_resources.aws_subnet.app1",
            "module.aws_resources.aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "module": "module.aws_resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app2-a",
      "provider": "module.aws_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0265f52f50a5a4b96",
            "route_table_id": "rtb-0be88d5b9d566ad3e",
            "subnet_id": "subnet-0cfd8325b2d310679"
          },
          "dependencies": [
            "module.aws_resources.aws_internet_gateway.petclinic-gw",
            "module.aws_resources.aws_route_table.petclinic-pub-rt",
            "module.aws_resources.aws_subnet.app2",
            "module.aws_resources.aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "module": "module.aws_resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app3-a",
      "provider": "module.aws_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046aee62c8fcde7e6",
            "route_table_id": "rtb-0be88d5b9d566ad3e",
            "subnet_id": "subnet-0beb1524491217b7c"
          },
          "dependencies": [
            "module.aws_resources.aws_internet_gateway.petclinic-gw",
            "module.aws_resources.aws_route_table.petclinic-pub-rt",
            "module.aws_resources.aws_subnet.app3",
            "module.aws_resources.aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "module": "module.aws_resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "petclinic-sg",
      "provider": "module.aws_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761677272:security-group/sg-0b2da6039ca314562",
            "description": "Stateful firewall configuration",
            "egress": [],
            "id": "sg-0b2da6039ca314562",
            "ingress": [],
            "name": "petclinic-sg",
            "name_prefix": "",
            "owner_id": "148761677272",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petclinic-sg"
            },
            "tags_all": {
              "Name": "petclinic-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0e7ce0c150d977c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_resources.aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "module": "module.aws_resources",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "module.aws_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3311829449",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b2da6039ca314562",
            "security_group_rule_id": "sgr-0538f06f6c002d76c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_resources.aws_security_group.petclinic-sg",
            "module.aws_resources.aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "module": "module.aws_resources",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_traffic_ipv6",
      "provider": "module.aws_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-1311162663",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b2da6039ca314562",
            "security_group_rule_id": "sgr-09c4f6899f002e655",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_resources.aws_security_group.petclinic-sg",
            "module.aws_resources.aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "module": "module.aws_resources",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_ipv4",
      "provider": "module.aws_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-452436959",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b2da6039ca314562",
            "security_group_rule_id": "sgr-0875180e2771feaf8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_resources.aws_security_group.petclinic-sg",
            "module.aws_resources.aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "module": "module.aws_resources",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "module.aws_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "173.21.193.194/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3582401152",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b2da6039ca314562",
            "security_group_rule_id": "sgr-0efe1b1f82758facb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_resources.aws_security_group.petclinic-sg",
            "module.aws_resources.aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "module": "module.aws_resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app1",
      "provider": "module.aws_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761677272:subnet/subnet-0d261095abe5bf16d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d261095abe5bf16d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "148761677272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app1"
            },
            "tags_all": {
              "Name": "app1"
            },
            "vpc_id": "vpc-0a0e7ce0c150d977c"
          },
          "dependencies": [
            "module.aws_resources.aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "module": "module.aws_resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app2",
      "provider": "module.aws_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761677272:subnet/subnet-0cfd8325b2d310679",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfd8325b2d310679",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "148761677272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app2"
            },
            "tags_all": {
              "Name": "app2"
            },
            "vpc_id": "vpc-0a0e7ce0c150d977c"
          },
          "dependencies": [
            "module.aws_resources.aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "module": "module.aws_resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app3",
      "provider": "module.aws_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761677272:subnet/subnet-0beb1524491217b7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0beb1524491217b7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "148761677272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app3"
            },
            "tags_all": {
              "Name": "app3"
            },
            "vpc_id": "vpc-0a0e7ce0c150d977c"
          },
          "dependencies": [
            "module.aws_resources.aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "module": "module.aws_resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv1",
      "provider": "module.aws_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761677272:subnet/subnet-0ead4639e26967688",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ead4639e26967688",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761677272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv1"
            },
            "tags_all": {
              "Name": "priv1"
            },
            "vpc_id": "vpc-0a0e7ce0c150d977c"
          },
          "dependencies": [
            "module.aws_resources.aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "module": "module.aws_resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv2",
      "provider": "module.aws_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761677272:subnet/subnet-05ce622eecc0528e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ce622eecc0528e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761677272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv2"
            },
            "tags_all": {
              "Name": "priv2"
            },
            "vpc_id": "vpc-0a0e7ce0c150d977c"
          },
          "dependencies": [
            "module.aws_resources.aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "module": "module.aws_resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv3",
      "provider": "module.aws_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761677272:subnet/subnet-08d754c540140168b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d754c540140168b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761677272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv3"
            },
            "tags_all": {
              "Name": "priv3"
            },
            "vpc_id": "vpc-0a0e7ce0c150d977c"
          },
          "dependencies": [
            "module.aws_resources.aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "module": "module.aws_resources",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "petclinic",
      "provider": "module.aws_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761677272:vpc/vpc-0a0e7ce0c150d977c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dd27b33accf33ec1",
            "default_route_table_id": "rtb-0beb36b0be3bf56e2",
            "default_security_group_id": "sg-05c75d25663c450d0",
            "dhcp_options_id": "dopt-0fc947ab7bfc4b485",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a0e7ce0c150d977c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0beb36b0be3bf56e2",
            "owner_id": "148761677272",
            "tags": {
              "Name": "petclinic"
            },
            "tags_all": {
              "Name": "petclinic"
            }
          }
        }
      ]
    }
  ]
}